--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -118,7 +118,7 @@ limitations under the License.
 
       <!-- Retirement Dashboard Button -->
       <div class="col-lg-4 deposit-send-payment-div">
-        <div class="card card-button deposit-send-button" onclick="window.open('/retirement-dashboard', '_blank')">
+        <div class="card card-button deposit-send-button" onclick="window.location.href='/retirement-dashboard'">
           <div class="card-body">
             <div class="row align-items-start">
               <div class="col">
